nambahin templates (main dan root). modifikasi di main html karena di models.py ada atribut yang berubah.

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,41 @@
 <h1>Football Shop</h1>
 
-<!-- <h5>NPM: </h5> -->
-<!-- <p>{{ npm }}</p> -->
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Class: </h5>
+<h5>Name:</h5>
+<p>{{ name }}</p>
+
+<h5>Class:</h5>
 <p>{{ class }}</p>
+
+<a href="{% url 'main:create_products' %}">
+  <button>+ Add Products</button>
+</a>
+
+<hr>
+
+{% if not products_list %}
+<p>Belum ada data produk pada Football Shop.</p>
+{% else %}
+
+{% for products in products_list %}
+<div>
+  <h2><a href="{% url 'main:show_products' products.id %}">{{ products.name }}</a></h2>
+
+  <p><b>{{ products.get_category_display }}</b>{% if products.is_featured %} | 
+    <b>Featured</b>{% endif %}{% if products.is_products_hot %} | 
+    <b>Hot</b>{% endif %} | <i>{{ products.created_at|date:"d M Y H:i" }}</i> 
+    | Views: {{ products.products_views }}</p>
+
+  {% if products.thumbnail %}
+  <img src="{{ products.thumbnail }}" alt="thumbnail" width="150" height="100">
+  <br />
+  {% endif %}
+
+  <p>{{ products.description|truncatewords:25 }}...</p>
+
+  <p><a href="{% url 'main:show_products' products.id %}"><button>Details</button></a></p>
+</div>
+
+<hr>
+{% endfor %}
+
+{% endif %}
