--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1>Add Products</h1>
+<h1>Add Product</h1>
 
 <form method="POST">
   {% csrf_token %}
@@ -9,7 +9,7 @@
     <tr>
       <td></td>
       <td>
-        <input type="submit" value="Add PRODUCTS" />
+        <input type="submit" value="Add PRODUCT" />
       </td>
     </tr>
   </table>
