--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,33 +6,33 @@
 <h5>Class:</h5>
 <p>{{ class }}</p>
 
-<a href="{% url 'main:create_products' %}">
-  <button>+ Add Products</button>
+<a href="{% url 'main:create_product' %}">
+  <button>+ Add Product</button>
 </a>
 
 <hr>
 
-{% if not products_list %}
+{% if not product_list %}
 <p>Belum ada data produk pada Football Shop.</p>
 {% else %}
 
-{% for products in products_list %}
+{% for product in product_list %}
 <div>
-  <h2><a href="{% url 'main:show_products' products.id %}">{{ products.name }}</a></h2>
+  <h2><a href="{% url 'main:show_product' product.id %}">{{ product.name }}</a></h2>
 
-  <p><b>{{ products.get_category_display }}</b>{% if products.is_featured %} | 
-    <b>Featured</b>{% endif %}{% if products.is_products_hot %} | 
-    <b>Hot</b>{% endif %} | <i>{{ products.created_at|date:"d M Y H:i" }}</i> 
-    | Views: {{ products.products_views }}</p>
+  <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
+    <b>Featured</b>{% endif %}{% if product.is_product_hot %} | 
+    <b>Hot</b>{% endif %} | <i>{{ product.created_at|date:"d M Y H:i" }}</i> 
+    | Views: {{ product.product_views }}</p>
 
-  {% if products.thumbnail %}
-  <img src="{{ products.thumbnail }}" alt="thumbnail" width="150" height="100">
+  {% if product.thumbnail %}
+  <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
   <br />
   {% endif %}
 
-  <p>{{ products.description|truncatewords:25 }}...</p>
+  <p>{{ product.description|truncatewords:25 }}...</p>
 
-  <p><a href="{% url 'main:show_products' products.id %}"><button>Details</button></a></p>
+  <p><a href="{% url 'main:show_product' product.id %}"><button>Details</button></a></p>
 </div>
 
 <hr>
