--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -19,6 +19,7 @@
 {% for product in product_list %}
 <div>
   <h2><a href="{% url 'main:show_product' product.id %}">{{ product.name }}</a></h2>
+  <p></p>Rp {{ product.price }}<p></p>
 
   <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
     <b>Featured</b>{% endif %}{% if product.is_product_hot %} | 
@@ -26,7 +27,7 @@
     | Views: {{ product.product_views }}</p>
 
   {% if product.thumbnail %}
-  <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+  <img src="{{ product.thumbnail }}" alt="thumbnail" width="200" height="200">
   <br />
   {% endif %}
 
