--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -19,7 +19,8 @@
 {% for product in product_list %}
 <div>
   <h2><a href="{% url 'main:show_product' product.id %}">{{ product.name }}</a></h2>
-  <p></p>Rp {{ product.price }}<p></p>
+  <p><b>Rp {{ product.price }}</b> | Stock: <b>{{product.stock}}</b></p>
+  <!-- <p><b>Rp {{ product.price }}<b> | Stock: <b>{{product.stock}}<b></p> -->
 
   <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
     <b>Featured</b>{% endif %}{% if product.is_product_hot %} | 
