--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -3,7 +3,7 @@
 <p><a href="{% url 'main:show_main' %}"><button>← Back to Product List</button></a></p>
 
 <h1>{{ product.name }}</h1>
-<p></p>Rp {{ product.price }}<p></p>
+<p><b>Rp {{ product.price }}</b> | Stock: <b>{{product.stock}}</b></p>
 <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
     <b>Featured</b>{% endif %}{% if product.is_product_hot %} | 
     <b>Hot</b>{% endif %} | <i>{{ product.created_at|date:"d M Y, H:i" }}</i> 
