--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -10,6 +10,10 @@
   <button>+ Add Product</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
 <hr>
 
 {% if not product_list %}
