--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,8 @@
 <h1>Football Shop</h1>
 
+<h5>NPM:</h5>
+<p>{{ npm }}</p>
+
 <h5>Name:</h5>
 <p>{{ name }}</p>
 
@@ -17,6 +20,14 @@
 <h5>Sesi terakhir login: {{ last_login }}</h5>
 
 <hr>
+
+<!-- Tambahkan kode ini -->
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a> 
 
 {% if not product_list %}
 <p>Belum ada data produk pada Football Shop.</p>
