--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -16,4 +16,11 @@
 
 <p>{{ product.description }}</p>
 
+<!-- Tambahkan kode ini -->
+{% if product.user %}
+    <p>Author: {{ product.user.username }}</p>
+{% else %}
+    <p>Author: Anonymous</p>
+{% endif %}
+
 {% endblock content %}
