--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -23,10 +23,10 @@
 
 <!-- Tambahkan kode ini -->
 <a href="?filter=all">
-    <button type="button">All Articles</button>
+    <button type="button">All Products</button>
 </a>
 <a href="?filter=my">
-    <button type="button">My Articles</button>
+    <button type="button">My Products</button>
 </a> 
 
 {% if not product_list %}
