--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -37,7 +37,6 @@
 <div>
   <h2><a href="{% url 'main:show_product' product.id %}">{{ product.name }}</a></h2>
   <p><b>Rp {{ product.price }}</b> | Stock: <b>{{product.stock}}</b></p>
-  <!-- <p><b>Rp {{ product.price }}<b> | Stock: <b>{{product.stock}}<b></p> -->
 
   <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
     <b>Featured</b>{% endif %}{% if product.is_product_hot %} | 
@@ -51,8 +50,22 @@
 
   <p>{{ product.description|truncatewords:25 }}...</p>
 
-  <p><a href="{% url 'main:show_product' product.id %}"><button>Details</button></a></p>
-</div>
+  <p>
+    <a href="{% url 'main:show_product' product.id %}"><button>Details</button></a>
+    {% if user.is_authenticated and product.user == user %}
+    <a href="{% url 'main:edit_product' product.pk %}">
+        <button>
+            Edit
+        </button>
+    </a>
+
+    <a href="{% url 'main:delete_product' product.pk %}">
+      <button>
+          Delete
+      </button>
+    </a>
+    {% endif %}
+</p>
 
 <hr>
 {% endfor %}
