--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock meta %}
     <script src="https://cdn.tailwindcss.com">
+    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
     </script>
 </head>
 
