--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock meta %}
-    <script src="https://cdn.tailwindcss.com">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
-    </script>
 </head>
 
 <body>
