--- a/templates/modal.html
+++ b/templates/modal.html
@@ -20,12 +20,12 @@
     <div class="px-6 py-4 space-y-6 form-style">
       <form id="productForm">
         <div class="mb-4">
-          <label for="title" class="block text-sm font-medium text-gray-700">Name</label>
-          <input type="text" id="title" name="title" class="mt-1 block w-full border border-gray-300 rounded-md px-3 py-2" placeholder="Enter product name" required>
+          <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+          <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md px-3 py-2" placeholder="Enter product name" required>
         </div>
         <div class="mb-4">
-          <label for="content" class="block text-sm font-medium text-gray-700">Description</label>
-          <textarea id="content" name="content" rows="3" class="mt-1 block w-full border border-gray-300 rounded-md px-3 py-2" placeholder="Enter product description" required></textarea>
+          <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+          <textarea id="description" name="description" rows="3" class="mt-1 block w-full border border-gray-300 rounded-md px-3 py-2" placeholder="Enter product description" required></textarea>
         </div>
         <div class="mb-4">
           <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
