fix some typos and event listener misplacement

--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -118,12 +118,11 @@ function showState(state) {
 // Get readable category name
 function getCategoryLabel(categoryCode) {
     const categoryMapping = {
-        transfer: 'Transfer',
-        update: 'Update',
-        exclusive: 'Exclusive',
-        match: 'Match',
-        rumor: 'Rumor',
-        analysis: 'Analysis',
+        jerseys: 'Jerseys',
+        pants: 'Pants',
+        jackets: 'Jackets',
+        shoes: 'Shoes',
+        balls: 'Balls',
     };
     return categoryMapping[categoryCode] || categoryCode;
 }
