--- a/main/templates/card_product.html
+++ b/main/templates/card_product.html
@@ -3,7 +3,7 @@
   <!-- Thumbnail -->
   <div class="aspect-[16/9] relative overflow-hidden">
     {% if product.thumbnail %}
-      <img src="{{ product.thumbnail }}" alt="{{ product.title }}" class="w-full h-full object-cover">
+      <img src="{{ product.thumbnail }}" alt="{{ product.name }}" class="w-full h-full object-cover">
     {% else %}
       <div class="w-full h-full bg-gray-200"></div>
     {% endif %}
